--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
   </div>
   <div class="resume-section">
     <h2>OBJECTIVE</h2>
-    <ul>
-      <li>Company ABC - Frontend Developer (2018 - Present)</li>
-      <li>Company XYZ - Intern (2016 - 2018)</li>
-    </ul>
+    <p>"Dynamic and results-oriented professional seeking a challenging position in imdustry where my skills can be utilized to contribute to the company's success while furthering personal and professional growth."
+
+    </p>
   </div>
   <div class="resume-section">
     <h2>Education</h2>
